[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/kenney-future-narrow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/multiplayer_menu.gd" type="Script" id=2]
[ext_resource path="res://menu/default_theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="StartMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 560.0
dragger_visibility = 1

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VSplitContainer"]
margin_right = 984.0
margin_bottom = 72.0
dragger_visibility = 1

[node name="BackButton" type="Button" parent="MarginContainer/VSplitContainer/HSplitContainer"]
margin_right = 116.0
margin_bottom = 72.0
text = "Back"

[node name="Title" type="Label" parent="MarginContainer/VSplitContainer/HSplitContainer"]
margin_left = 140.0
margin_right = 984.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 3 )
text = "Multiplayer"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VSplitContainer"]
margin_top = 96.0
margin_right = 984.0
margin_bottom = 560.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VSplitContainer/CenterContainer"]
margin_left = 199.0
margin_top = 72.0
margin_right = 785.0
margin_bottom = 392.0
custom_constants/vseparation = 16
custom_constants/hseparation = 32
columns = 2

[node name="Ip" type="Label" parent="MarginContainer/VSplitContainer/CenterContainer/GridContainer"]
margin_top = 10.0
margin_right = 204.0
margin_bottom = 46.0
text = "IP: "
align = 2

[node name="IpBox" type="LineEdit" parent="MarginContainer/VSplitContainer/CenterContainer/GridContainer"]
margin_left = 236.0
margin_right = 586.0
margin_bottom = 56.0
rect_min_size = Vector2( 350, 0 )
text = "127.0.0.1"
align = 1

[node name="Port" type="Label" parent="MarginContainer/VSplitContainer/CenterContainer/GridContainer"]
margin_top = 82.0
margin_right = 204.0
margin_bottom = 118.0
text = "Port: "
align = 2

[node name="PortBox" type="LineEdit" parent="MarginContainer/VSplitContainer/CenterContainer/GridContainer"]
margin_left = 236.0
margin_top = 72.0
margin_right = 586.0
margin_bottom = 128.0
rect_min_size = Vector2( 350, 0 )
text = "30661"
align = 1

[node name="Vehicle" type="Label" parent="MarginContainer/VSplitContainer/CenterContainer/GridContainer"]
margin_top = 150.0
margin_right = 204.0
margin_bottom = 186.0
text = "Vehicle: "
align = 2

[node name="VehicleSelector" type="OptionButton" parent="MarginContainer/VSplitContainer/CenterContainer/GridContainer"]
margin_left = 236.0
margin_top = 144.0
margin_right = 586.0
margin_bottom = 192.0
text = "Select vehicle"
align = 1

[node name="Track" type="Label" parent="MarginContainer/VSplitContainer/CenterContainer/GridContainer"]
margin_top = 214.0
margin_right = 204.0
margin_bottom = 250.0
text = "Track: "
align = 2

[node name="TrackSelector" type="OptionButton" parent="MarginContainer/VSplitContainer/CenterContainer/GridContainer"]
margin_left = 236.0
margin_top = 208.0
margin_right = 586.0
margin_bottom = 256.0
text = "Select track"
align = 1

[node name="JoinButton" type="Button" parent="MarginContainer/VSplitContainer/CenterContainer/GridContainer"]
margin_top = 272.0
margin_right = 204.0
margin_bottom = 320.0
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="MarginContainer/VSplitContainer/CenterContainer/GridContainer"]
margin_left = 236.0
margin_top = 272.0
margin_right = 586.0
margin_bottom = 320.0
text = "Host Game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VSplitContainer/HSplitContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/CenterContainer/GridContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/CenterContainer/GridContainer/HostButton" to="." method="_on_HostButton_pressed"]
